--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="clase.css">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
 
+<h1>Texto de inicio</h1>
 </body>
-
 </html>
