--- a/IniciarSesion.html
+++ b/IniciarSesion.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     
-<form action="/HTML/prueba.html" method="get">
+<form action="/HTML/index.html" method="get">
     <label for="Name">Nombre de Usuario</label>
     <input type="Name" required><br><br>
     <label for="Pasword">Contraseña</label>
@@ -19,4 +19,5 @@
 </form>
 
 </body>
+
 </html>
