--- a/IniciarSesion.html
+++ b/IniciarSesion.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Iniciar Sesión</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/CSS/CSSdeiniciosesion.css">
     <link rel="icon" href="">
 </head>
 <body>
     
-<form action="/HTML/index.html" method="get">
+<form action="/HTML/prueba.html" method="get">
     <label for="Name">Nombre de Usuario</label>
     <input type="Name" required><br><br>
     <label for="Pasword">Contraseña</label>
@@ -19,5 +19,4 @@
 </form>
 
 </body>
-
 </html>
